[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "echo-server"
path = "src/server.rs"

[[bin]]
name = "echo-client"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
prost = "0.11.3"
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
